crates/pmcp-server-toolkit/tests/compile_fail/token_secret_no_debug.stderr
error[E0277]: `SecretValue` doesn't implement `Debug`
 --> tests/compile_fail/token_secret_no_debug.rs:9:22
  |
9 |     println!("{:?}", s);
  |               ----   ^ `SecretValue` cannot be formatted using `{:?}` because it doesn't implement `Debug`
  |               |
  |               required by this formatting parameter
  |
  = help: the trait `Debug` is not implemented for `SecretValue`
